--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		<li><a href="https://pm.me/">Epost</a></li>
 		<li><a href="https://pm.me/">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
+		<li><a href="https://github.com/cerexas/bibliotek/">Bibliotek</a></li>
 		<li><a href="https://github.com/cerexas/regnskap/">Regnskap</a></li>
 	</ul>
       </div>
