--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     try {
       const events = await fetchGithubEvents(organization);
       const listElement = document.getElementById("github-feed");
+      const maxItems = 7; // Set the maximum number of activities to display
 
-      events.forEach(event => {
+      events.slice(0, maxItems).forEach(event => {
         const listItem = document.createElement("li");
         listItem.textContent = `${event.actor.login} ${event.type} in ${event.repo.name}`;
         listElement.appendChild(listItem);
