--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<ul>
 		<li><a href="https://cerex.no/">Cerex</a></li>
 		<li><a href="https://github.com/orgs/cerexas/repositories/">Repo</a></li>
+		<li><a href="https://dnb.no/bedrift/">DNB</a></li>
 		<li><a href="https://pm.me/">Epost</a></li>
 		<li><a href="https://pm.me/">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
