--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 	<ul>
 		<li><a href="https://cerex.no/">Cerex</a></li>
 		<li><a href="https://github.com/orgs/cerexas/repositories/">Repo</a></li>
-		<li><a href="https://dnb.no/bedrift/">DNB</a></li>
-		<li><a href="https://pm.me/">Epost</a></li>
-		<li><a href="https://pm.me/">Kalender</a></li>
+		<li><a href="https://mail.cerex.no/">Epost</a></li>
+		<li><a href="https://github.com/cerexas/kalender/">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
 		<li><a href="https://github.com/cerexas/bibliotek/">Bibliotek</a></li>
+		<li><a href="https://dnb.no/bedrift/">Bank</a></li>
 		<li><a href="https://github.com/cerexas/regnskap/">Regnskap</a></li>
 	</ul>
       </div>
