--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
   <div class="container">
     <div id="trello-section">
       <!-- Add your Trello content here -->
-      <h2>Trello Board</h2>
+      <h2>Bildedatabaser</h2>
     </div>
-
+    <ol>
+	    <li><a href="https://image-net.org/">ImageNet</a>: This is a large database of annotated images, and it's often used in image recognition and object detection tasks.</li>
+	    <li><a href="https://cocodataset.org/">COCO (Common Objects in Context)</a>: This is a large-scale object detection, segmentation, and captioning dataset.</li>
+	    <li><a href="https://storage.googleapis.com/openimages/web/index.html">Open Images</a>: It's a dataset from Google that is also used for object detection, visual relationship detection, and instance segmentation.</li>
+	    <li><a href="https://www.kaggle.com/datasets/hojjatk/mnist-dataset">MNIST</a>: This database contains a large set of handwritten digits that are commonly used for training various image processing systems.</li>
+	    <li><a href="https://www.kaggle.com/datasets/zalando-research/fashionmnist">Fashion MNIST</a>: This is a dataset of Zalando's article images, with 28x28 grayscale images of 70,000 fashion products from 10 categories, and 7,000 images per category. The dataset is intended to serve as a direct drop-in replacement for the original MNIST dataset for benchmarking machine learning algorithms, as it shares the same image size and structure of training and testing splits.</li>
+	    <li><a href="https://www.kaggle.com/datasets/jessicali9530/celeba-dataset">CelebA (CelebFaces Attributes Dataset)</a>: This is a large-scale face attributes dataset with more than 200,000 celebrity images, each with 40 attribute labels.</li>
+    </ol>
     <div id="right-section">
       <div id="github-section">
         <!-- Add your GitHub content here -->
