--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="right-section">
       <div id="github-section">
         <!-- Add your GitHub content here -->
-	<h3><a href="https://github.com/cerexas">GitHub-aktivitet</a></h3>
+	<h3><a href="https://github.com/orgs/cerexas/repositories/">GitHub-aktivitet</a></h3>
 	<ul id="github-feed"></ul>
       </div>
 
@@ -56,7 +56,6 @@
         <h3>Lenker</h3>
 	<ul>
 		<li><a href="https://cerex.no/">Cerex</a></li>
-		<li><a href="https://github.com/orgs/cerexas/repositories/">Repo</a></li>
 		<li><a href="https://mail.cerex.no/">Epost</a></li>
 		<li><a href="https://github.com/cerexas/kalender/">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
