--- a/index.html
+++ b/index.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dash - Cerex</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-    }
-    .container {
-      display: flex;
-      height: 100vh;
-    }
-    #trello-section {
-      flex: 4;
-      background-color: lightblue;
-      padding: 20px;
-    }
-    #right-section {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      background-color: lightgray;
-      padding: 20px;
-    }
-    #github-section, #links-section {
-      flex: 1;
-    }
-  </style>
+<meta charset="UTF-8">
+<link rel='stylesheet' type='text/css' href='style.css'>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cerex - sw sol'ns | Dash</title>
 </head>
+
 <body>
   <div class="container">
-    <div id="trello-section">
-      <!-- Add your Trello content here -->
-      <h2>Bildedatabaser</h2>
+    <div id="blog-section">
+<!-- LB -->
+<div class='entry'>
+<h2 id='events-som-kan-vaere-av-interesse'>Events som kan være av interesse</h2>
+<p>01.jun <a href="https://www.naeringsforeningen.no/moeter/u37-afterwork_010623/">U37 Sommerfest</a><br />
+Savner du en møteplass for unge i næringslivet? Da har du kommet på rett plass. ONS Young og U37 inviterer deg til sommerfest.
+</p>
+
+<p>02.jun <a href="https://www.naeringsforeningen.no/moeter/u37-dalane-sommerfest_020623/">U37 Dalane Sommerfest</a><br />
+Klar for å feire sommeren med stil? U37 Dalane inviterer til årets mest
+etterlengtede sommerfest fredag på Grand Hotell Egersund! La oss nyte
+smakfull mat, deilige drinker, god musikk og fantastisk selskap sammen.
+Ikke gå glipp av denne muligheten til å mingle med likesinnede, bygge
+verdifulle relasjoner og ha det skikkelig gøy!</p>
+
+<p>08.jun <a href="https://www.naeringsforeningen.no/moeter/teknologidag-jaeren_080623/">Teknologidagen - Made in Klepp</a><br />
+Det bugner av unik teknologikompetanse i Klepp. Alt fra til havbunns-
+til romfartsteknologi. Tech Expo – Made in Klepp, er en arena der
+teknologien møtes på tvers av bransjer. Med kompetansedeling og
+samarbeid i fokus gjør vi dette til en utstilling med lave skuldre.</p>
+
+<p>09.jun <a href="https://www.naeringsforeningen.no/moeter/energifrokost_juni2023/">Energifrokost: Digitalisering og forbedringer</a><br />
+Hva er avgjørende for å styrke Energihovedstaden og støtte
+energitransformasjonen? Hvordan bidra til å utvikle – ikke avvikle – den
+ viktige petroleumsindustrien, og hva skal til for å skape nye
+lavutslipps energinæringer og arbeidsplasser?
+Møteserien i 2023 viser fram og diskuterer mange av aspektene med
+energiutviklingen og er for alle interesserte.</p>
+
+<small>Sun, 21 May 2023 22:14 +0200</small>
+</div>
+
+<div class='entry'>
+<h2 id='bildedatabaser'>Bildedatabaser</h2>
     <ol>
 	    <li><a href="https://image-net.org/">ImageNet</a>: This is a large database of annotated images, and it's often used in image recognition and object detection tasks.</li>
 	    <li><a href="https://cocodataset.org/">COCO (Common Objects in Context)</a>: This is a large-scale object detection, segmentation, and captioning dataset.</li>
@@ -43,7 +51,10 @@
 	    <li><a href="https://www.kaggle.com/datasets/zalando-research/fashionmnist">Fashion MNIST</a>: This is a dataset of Zalando's article images, with 28x28 grayscale images of 70,000 fashion products from 10 categories, and 7,000 images per category. The dataset is intended to serve as a direct drop-in replacement for the original MNIST dataset for benchmarking machine learning algorithms, as it shares the same image size and structure of training and testing splits.</li>
 	    <li><a href="https://www.kaggle.com/datasets/jessicali9530/celeba-dataset">CelebA (CelebFaces Attributes Dataset)</a>: This is a large-scale face attributes dataset with more than 200,000 celebrity images, each with 40 attribute labels.</li>
     </ol>
+<small>Sun, 21 May 2023 09:51 +0200</small>
+</div>
     </div>
+
     <div id="right-section">
       <div id="github-section">
         <!-- Add your GitHub content here -->
