--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb-NO">
 <head>
 <meta charset="UTF-8">
 <link rel='stylesheet' type='text/css' href='style.css'>
@@ -67,7 +67,7 @@ energiutviklingen og er for alle interesserte.</p>
         <h3>Lenker</h3>
 	<ul>
 		<li><a href="https://cerex.no/">Cerex</a></li>
-		<li><a href="https://mail.cerex.no/">Epost</a></li>
+		<!--	<li><a href="https://mail.cerex.no/">Epost</a></li> -->
 		<li><a href="https://github.com/cerexas/kalender/">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
 		<li><a href="https://github.com/cerexas/bibliotek/">Bibliotek</a></li>
