fikset lb-skript

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ lavutslipps energinæringer og arbeidsplasser?
 Møteserien i 2023 viser fram og diskuterer mange av aspektene med
 energiutviklingen og er for alle interesserte.</p>
 
-<small>Sun, 21 May 2023 22:14 +0200</small>
+<small>Sun, 21. May 2023 22:14</small>
 </div>
 
 <div class='entry'>
@@ -51,7 +51,7 @@ energiutviklingen og er for alle interesserte.</p>
 	    <li><a href="https://www.kaggle.com/datasets/zalando-research/fashionmnist">Fashion MNIST</a>: This is a dataset of Zalando's article images, with 28x28 grayscale images of 70,000 fashion products from 10 categories, and 7,000 images per category. The dataset is intended to serve as a direct drop-in replacement for the original MNIST dataset for benchmarking machine learning algorithms, as it shares the same image size and structure of training and testing splits.</li>
 	    <li><a href="https://www.kaggle.com/datasets/jessicali9530/celeba-dataset">CelebA (CelebFaces Attributes Dataset)</a>: This is a large-scale face attributes dataset with more than 200,000 celebrity images, each with 40 attribute labels.</li>
     </ol>
-<small>Sun, 21 May 2023 09:51 +0200</small>
+<small>Sun, 21. May 2023 09:51</small>
 </div>
     </div>
 
