la til evenement

--- a/index.html
+++ b/index.html
@@ -14,24 +14,28 @@
 <div class='entry'>
 <h2 id='events-som-kan-vaere-av-interesse'>Events som kan være av interesse</h2>
 <hr>
-<p>01.jun <a href="https://www.naeringsforeningen.no/moeter/u37-afterwork_010623/">U37 Sommerfest</a><br />
+<p>30. mai - 4. juni <a href="https://bc.dnb.no/campaign/email/detail/62415?cid=xXqyeN">DNB Uka</a><br />
+Det blir et bredt og godt program med mange aktiviteter for både bedrifts- og privatkunder.
+For våre bedriftskunder blir det 3 frokostseminarer, alle i våre lokaler og med oppstart kl 08:00.</p>
+
+<p>01. jun <a href="https://www.naeringsforeningen.no/moeter/u37-afterwork_010623/">U37 Sommerfest</a><br />
 Savner du en møteplass for unge i næringslivet? Da har du kommet på rett plass. ONS Young og U37 inviterer deg til sommerfest.
 </p>
 
-<p>02.jun <a href="https://www.naeringsforeningen.no/moeter/u37-dalane-sommerfest_020623/">U37 Dalane Sommerfest</a><br />
+<p>02. jun <a href="https://www.naeringsforeningen.no/moeter/u37-dalane-sommerfest_020623/">U37 Dalane Sommerfest</a><br />
 Klar for å feire sommeren med stil? U37 Dalane inviterer til årets mest
 etterlengtede sommerfest fredag på Grand Hotell Egersund! La oss nyte
 smakfull mat, deilige drinker, god musikk og fantastisk selskap sammen.
 Ikke gå glipp av denne muligheten til å mingle med likesinnede, bygge
 verdifulle relasjoner og ha det skikkelig gøy!</p>
 
-<p>08.jun <a href="https://www.naeringsforeningen.no/moeter/teknologidag-jaeren_080623/">Teknologidagen - Made in Klepp</a><br />
+<p>08. jun <a href="https://www.naeringsforeningen.no/moeter/teknologidag-jaeren_080623/">Teknologidagen - Made in Klepp</a><br />
 Det bugner av unik teknologikompetanse i Klepp. Alt fra til havbunns-
 til romfartsteknologi. Tech Expo – Made in Klepp, er en arena der
 teknologien møtes på tvers av bransjer. Med kompetansedeling og
 samarbeid i fokus gjør vi dette til en utstilling med lave skuldre.</p>
 
-<p>09.jun <a href="https://www.naeringsforeningen.no/moeter/energifrokost_juni2023/">Energifrokost: Digitalisering og forbedringer</a><br />
+<p>09. jun <a href="https://www.naeringsforeningen.no/moeter/energifrokost_juni2023/">Energifrokost: Digitalisering og forbedringer</a><br />
 Hva er avgjørende for å styrke Energihovedstaden og støtte
 energitransformasjonen? Hvordan bidra til å utvikle – ikke avvikle – den
  viktige petroleumsindustrien, og hva skal til for å skape nye
