--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ energiutviklingen og er for alle interesserte.</p>
         <h3>Lenker</h3>
 	<ul>
 		<li><a href="https://cerex.no/">Cerex</a></li>
-		<!--	<li><a href="https://mail.cerex.no/">Epost</a></li> -->
+		<li><a href="https://colab.research.google.com/">Google Colab</a></li>
 		<li><a href="https://github.com/cerexas/kalender/">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
 		<li><a href="https://github.com/cerexas/bibliotek/">Bibliotek</a></li>
