--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ energiutviklingen og er for alle interesserte.</p>
         <h3>Lenker</h3>
 	<ul>
 		<li><a href="https://cerex.no/">Cerex</a></li>
+		<li><a href="https://trello.com/b/rvMc25C3/cerex">Trello</a></li>
 		<li><a href="https://colab.research.google.com/">Google Colab</a></li>
 		<li><a href="https://github.com/cerexas/kalender/">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
