--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@ energiutviklingen og er for alle interesserte.</p>
 	<ul>
 		<li><a href="https://cerex.no/">Cerex</a></li>
 		<li><a href="https://trello.com/b/rvMc25C3/cerex">Trello</a></li>
-		<li><a href="https://colab.research.google.com/">Google Colab</a></li>
+		<li><a href="https://colab.research.google.com">Google Colab</a></li>
 		<li><a href="https://linkedin.com/company/cerexco">LinkedIn</a></li>
-		<li><a href="https://github.com/cerexas/kalender/">Kalender</a></li>
-		<li><a href="https://github.com/cerexas/arkiv/">Arkiv</a></li>
-		<li><a href="https://github.com/cerexas/bibliotek/">Bibliotek</a></li>
-		<li><a href="https://dnb.no/bedrift/">Bank</a></li>
-		<li><a href="https://github.com/cerexas/regnskap/">Regnskap</a></li>
+		<li><a href="https://dnb.no/bedrift">Bank</a></li>
+		<li><a href="https://www.raspberrypi.com/software/operating-systems/#raspberry-pi-os-64-bit">RPi OS</a></li>
+		<li><a href="https://github.com/cerexas/kalender">Kalender</a></li>
+		<li><a href="https://github.com/cerexas/arkiv">Arkiv</a></li>
+		<li><a href="https://github.com/cerexas/bibliotek">Bibliotek</a></li>
+		<li><a href="https://github.com/cerexas/regnskap">Regnskap</a></li>
 	</ul>
      </div>
   </div>
