--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ energiutviklingen og er for alle interesserte.</p>
 		<li><a href="https://linkedin.com/company/cerexco">LinkedIn</a></li>
 		<li><a href="https://dnb.no/bedrift">Bank</a></li>
 		<li><a href="https://www.raspberrypi.com/software/operating-systems/#raspberry-pi-os-64-bit">RPi OS</a></li>
-		<li><a href="https://coral.ai/docs/accelerator/get-started/#requirements">Google Coral</a></li>
+		<li><a href="https://coral.ai/docs/accelerator/get-started">Google Coral</a></li>
 		<li><a href="https://github.com/cerexas/kalender">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv">Arkiv</a></li>
 		<li><a href="https://github.com/cerexas/bibliotek">Bibliotek</a></li>
