--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@ energiutviklingen og er for alle interesserte.</p>
         <!-- Add your links here -->
         <h3>Lenker</h3>
 	<ul>
-		<li><a href="https://cerex.no/">Cerex</a></li>
+		<li><a href="https://cerex.no">Cerex</a></li>
 		<li><a href="https://trello.com/b/rvMc25C3/cerex">Trello</a></li>
 		<li><a href="https://colab.research.google.com">Google Colab</a></li>
+		<li><a href="https://www.kaggle.com">Kaggle</a></li>
 		<li><a href="https://linkedin.com/company/cerexco">LinkedIn</a></li>
 		<li><a href="https://dnb.no/bedrift">Bank</a></li>
 		<li><a href="https://www.raspberrypi.com/software/operating-systems/#raspberry-pi-os-64-bit">RPi OS</a></li>
