--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ energiutviklingen og er for alle interesserte.</p>
 		<li><a href="https://www.raspberrypi.com/software/operating-systems/#raspberry-pi-os-64-bit">RPi OS</a></li>
 		<li><a href="https://coral.ai/docs/accelerator/get-started">Google Coral</a></li>
 		<li><a href="https://www.tensorflow.org/tutorials">TensorFlow Tutorials</a></li>
+		<li><a href="https://www.tensorflow.org/hub">TensorFlow Hub</a></li>
 		<li><a href="https://github.com/cerexas/kalender">Kalender</a></li>
 		<li><a href="https://github.com/cerexas/arkiv">Arkiv</a></li>
 		<li><a href="https://github.com/cerexas/bibliotek">Bibliotek</a></li>
