--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <div id="blog-section">
 <!-- LB -->
 <div class='entry'>
+<h2 id='lenker-av-forbigaende-interesse'>Lenker av forbigående interesse</h2>
+<hr>
+<ul>
+	<li><a href="https://cultists.network/140/psu-tier-list/">PSU Tier List</a></li>
+	<li><a href="https://rpilocator.com/">RPi Locator</a></li>
+</ul>
+<small>Tue, 11. Jul 2023 13:21</small>
+</div>
+<div class='entry'>
 <h2 id='events-som-kan-vaere-av-interesse'>Events som kan være av interesse</h2>
 <hr>
 <p>30. mai - 4. jun <a href="https://bc.dnb.no/campaign/email/detail/62415?cid=xXqyeN">DNB Uka</a><br />
