--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@ energiutviklingen og er for alle interesserte.</p>
 		<li><a href="https://cerex.no">Cerex</a></li>
 		<li><a href="https://trello.com/b/rvMc25C3/cerex">Trello</a></li>
 		<li><a href="https://www.kaggle.com">Kaggle</a></li>
-		<li><a href="https://github.com/roboflow/notebooks">Roboflow notebooks</a></li>
 		<li><a href="https://colab.research.google.com">Google Colab</a></li>
 		<li><a href="https://coral.ai/docs/accelerator/get-started">Google Coral</a></li>
+		<li><a href="https://drive.google.com">Google Drive</a></li>
+		<li><a href="https://github.com/roboflow/notebooks">Roboflow notebooks</a></li>
 		<li><a href="https://www.tensorflow.org/tutorials">TensorFlow Tutorials</a></li>
 		<li><a href="https://www.tensorflow.org/hub">TensorFlow Hub</a></li>
 		<li><a href="https://www.raspberrypi.com/software/operating-systems/#raspberry-pi-os-64-bit">RPi OS</a></li>
