--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   <div id="blog-section">
 <!-- LB -->
 <div class='entry'>
+<h2 id='email-setup'>Email setup</h2>
+<hr>
+IMAP server: mail.cerex.no<br />
+Port: 993 (SSL/TLS)<br />
+
+SMTP server: mail.cerex.no<br />
+Port 465 (SSL/TLS)<br />
+<small>Wed, 20. Sep 2023 15:58</small>
+</div>
+<div class='entry'>
 <h2 id='lenker-av-forbigaende-interesse'>Lenker av forbigående interesse</h2>
 <hr>
 <ul>
