--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <div class='entry'>
 <h2 id='email-setup'>Email setup</h2>
 <hr>
-IMAP server: mail.cerex.no<br />
-Port: 993 (SSL/TLS)<br />
+<p>IMAP server:</b> mail.cerex.no<br />
+<b>Port:</b> 993 (SSL/TLS)</p>
 
-SMTP server: mail.cerex.no<br />
-Port 465 (SSL/TLS)<br />
+<p><b>SMTP server:</b> mail.cerex.no<br />
+<b>Port:</b> 465 (SSL/TLS)</p>
 <small>Wed, 20. Sep 2023 15:58</small>
 </div>
 <div class='entry'>
