--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class='entry'>
 <h2 id='email-setup'>Email setup</h2>
 <hr>
-<p>IMAP server:</b> mail.cerex.no<br />
+<p><b>IMAP server:</b> mail.cerex.no<br />
 <b>Port:</b> 993 (SSL/TLS)</p>
 
 <p><b>SMTP server:</b> mail.cerex.no<br />
